# editText_inator

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
res/shaders/: fragment.spv  vertex.spv
res/shaders_code/: fragment.glsl  vertex.glsl
src/: gapBuffers.hpp  main.cpp  renderer.cpp  renderer.hpp
